# pg3401-exam

./: .gitignore  README.md
task_2/: CMakeLists.txt  makefile
task_2/lib/: eksamen_v23_oppgave2_abun.c  eksamen_v23_oppgave2_abun.h  eksamen_v23_oppgave2_cube.c  eksamen_v23_oppgave2_cube.h  eksamen_v23_oppgave2_def.c  eksamen_v23_oppgave2_def.h  eksamen_v23_oppgave2_fib.c  eksamen_v23_oppgave2_fib.h  eksamen_v23_oppgave2_kvad.c  eksamen_v23_oppgave2_kvad.h  eksamen_v23_oppgave2_odd.c  eksamen_v23_oppgave2_odd.h  eksamen_v23_oppgave2_perf.c  eksamen_v23_oppgave2_perf.h  eksamen_v23_oppgave2_prim.c  eksamen_v23_oppgave2_prim.h
task_2/src/: analyzeNumbersFromFile.c  analyzeNumbersFromFile.h  main.c
task_3/: CMakeLists.txt  makefile
task_3/src/: main.c  program.c  program.h
task_3/src/LinkedList/: ll_flights.c  ll_flights.h
task_4/: CMakeLists.txt
task_4/resources/: custome_file.txt
task_4/src/: eksamen_v23_oppgave4.c
task_5/: CMakeLists.txt  makefile
task_5/lib/error/: error.c  error.h
task_5/lib/input/: input.c  input.h
task_5/src/: client.c  client.h  eksamen_v23_oppgave5_exec.c  eksamen_v23_oppgave5_exec.h  main.c  main.h  protocol.c  protocol.h  server.c  server.h
task_6/: CMakeLists.txt  makefile
task_6/resources/: randomCode.c  randomCode.txt  randomCode_beautified.c
task_6/src/: main.c  main.h
